Closed Bug 1392996 Opened 8 years ago Closed 7 years ago

view-source appearance tweaks for mobile

Categories

(Firefox for Android Graveyard :: General, defect)

55 Branch
All
Android
defect
Not set
normal

Tracking

(firefox60 fixed)

RESOLVED FIXED
Firefox 60
Tracking Status
firefox60 --- fixed

People

(Reporter: felix.bau, Assigned: JanH)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Android 7.0; Mobile; rv:55.0) Gecko/55.0 Firefox/55.0 Build ID: 20170815231002 Steps to reproduce: I opened view-source:url for some url Actual results: it didn't wrap lines and I had to knew about "view-source:" and enter it manually Expected results: it would be nice, if an option "view source code" would be available from the page options, that opens the source code in a new tab. it should wrap long lines, so that it is readable. (opposite default value for the already existing config) and one last thing: the line numbers are a bit small and not very contrasty, which makes them hard to read in sun-light
Bug 1389289, although that in turn is blocked by bug 1251854, because the context menu that allows toggling word wrapping, syntax highlighting and the like is currently preventing any text selection.
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → DUPLICATE
Good to know, you're working on the text selection, looking forward to it :) view_source.wrap_long_lines should be set to true by default IMO (so that you can disable wrapping with the new context menu) and the line numbers (on the left) should have more contrast should we reopen this bug, or should I add this to the comments of the other one?
Hmm yes, best to reopen this to track just the additional tweaks for mobile.
Blocks: 1389829
Status: RESOLVED → REOPENED
Ever confirmed: true
OS: Unspecified → Android
Hardware: Unspecified → All
Resolution: DUPLICATE → ---
Summary: view-source option in GUI + wrap lines → view-source appearance tweaks for mobile
Turning word wrapping on seems to subject the page to font inflation, because the line numbers suddenly appear much smaller than the rest of the source text. I guess that also explains your comment that "the line numbers are a bit small". With any luck, changing the HTML markup powering the source display to include the appropriate <meta> viewport tag, using either width=device-width or else initial-scale=1.0, might be enough to fix this.
Status: REOPENED → NEW
Assignee: nobody → jh+bugzilla
Comment on attachment 8946134 [details] Bug 1392996 - Part 1 - Add meta viewport tag to view-source document. I think Henri should take a look at this.
Attachment #8946134 - Flags: review?(bugs) → review?(hsivonen)
Comment on attachment 8946135 [details] Bug 1392996 - Part 2 - Enable view-source word-wrapping by default in Fennec. https://reviewboard.mozilla.org/r/216122/#review222532
Attachment #8946135 - Flags: review?(snorp) → review+
Comment on attachment 8946134 [details] Bug 1392996 - Part 1 - Add meta viewport tag to view-source document. https://reviewboard.mozilla.org/r/216120/#review223532 Thanks and sorry about the delay.
Attachment #8946134 - Flags: review?(hsivonen) → review+
Pushed by mozilla@buttercookie.de: https://hg.mozilla.org/integration/autoland/rev/fce65dcf661b Part 1 - Add meta viewport tag to view-source document. r=hsivonen https://hg.mozilla.org/integration/autoland/rev/11e5e7079111 Part 2 - Enable view-source word-wrapping by default in Fennec. r=snorp
Status: NEW → RESOLVED
Closed: 8 years ago7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 60
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: