parser/html/nsHtml5ViewSourceUtils.h
@@ -12,6 +12,7 @@ class nsHtml5ViewSourceUtils
   public:
     static nsHtml5HtmlAttributes* NewBodyAttributes();
     static nsHtml5HtmlAttributes* NewLinkAttributes();
+    static nsHtml5HtmlAttributes* NewMetaViewportAttributes();
 };
 
 #endif // nsHtml5ViewSourceUtils_h
